complete-k8s-ingress/basic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  rules:
  - http:
      paths:
      - path: /v1/*
        pathType: Prefix
        backend:
          service:
            name: ingress-ms1-svc
            port:
              number: 8080
      - path: /v2/*
        pathType: Prefix
        backend:
          service:
            name: ingress-ms2-svc
            port:
              number: 8080
